--- a/priv/static/css/phoenix.css
+++ b/priv/static/css/phoenix.css
@@ -13,8 +13,9 @@ body {
   padding-bottom: 20px;
 }
 
+/*
 #canvas {
-    width: 100%;
-    height: 800px; /* TODO change to % later, currently gives bug.. */
+    width: 200px;
+    height: 200px; 
     margin: 0;
-}
+}*/
